add if/else statement

--- a/static/pug/catalog.pug
+++ b/static/pug/catalog.pug
@@ -7,6 +7,8 @@ block variables
   - var pathContentImg = 'static/images/content/'
   - var pathCommonImg = 'static/images/common/'
 
+  - var userLogin = false
+
 block content
   .content
     main(class= pageClass)
