--- a/static/pug/index.pug
+++ b/static/pug/index.pug
@@ -6,6 +6,8 @@ block variables
 
   - var pathContentImg = 'static/images/content/'
   - var pathCommonImg = 'static/images/common/'
+
+  - var userLogin = false
   
 block content
   .content
