--- a/static/pug/iron-king.pug
+++ b/static/pug/iron-king.pug
@@ -7,6 +7,8 @@ block variables
   - var pathContentImg = 'static/images/content/'
   - var pathCommonImg = 'static/images/common/'
 
+  - var userLogin = true
+
 block content
   .content
     main(class= pageClass)
