--- a/static/pug/modules/reviews/critique-data.pug
+++ b/static/pug/modules/reviews/critique-data.pug
@@ -2,6 +2,7 @@
     var reviews = [
         {
             name: "Алексей Иванов",
+            gender: "male",
             count: "23",
             review: "Хорошая книга. Полна приключений, романтики, неплохих действующих героев. Вообщем всего, что нужно, чтобы хорошо провести время за чтением.",
             img: `${pathContentImg}review-4.jpg`,
@@ -11,6 +12,7 @@
         },
         {
             name: "Анна Кириллова",
+            gender: "female",
             count: "50",
             review: "Не ожидала многого от этой книги, купилась больше на красивую обложку, но была рада ошибиться. Обе книги прочитала дня за 3 или 4, уже не помню, так вчиталась!",
             img: `${pathContentImg}review-5.jpg`,
@@ -20,6 +22,7 @@
         },
         {
             name: "Мария Нагаева ",
+            gender: "female",
             count: "8",
             review: "Очень нетипичный подход, учитывая, что фейри и железо слабо совместимы, но логика автора, позволившая формирование нового Двора, меня восхитила.",
             img: `${pathContentImg}review-6.jpg`,
