--- a/static/pug/modules/reviews/reviews-data.pug
+++ b/static/pug/modules/reviews/reviews-data.pug
@@ -2,6 +2,7 @@
     var reviews = [
         {
             name: "Кирилл Агапьев",
+            gender: "male",
             count: "35",
             review: "Огромный ассортимент разных книг, которых нет в магазинах нашего города. Цены зачастую гораздо ниже магазинских, так плюс к этому ещё и постоянные большие скидки!",
             img: `${pathContentImg}review-1.jpg`,
@@ -11,6 +12,7 @@
         },
         {
             name: "Елизавета Марьина",
+            gender: "female",
             count: "76",
             review: "Удобная навигация, большой выбор, книги в подарок при определенной сумме заказа. Заказ собирают без ошибок, привозят без задержек",
             img: `${pathContentImg}review-2.jpg`,
@@ -20,6 +22,7 @@
         },
         {
             name: "Полина Аленичева",
+            gender: "female",
             count: "17",
             review: "Удобный каталог, полезные отзывы на книги, так же есть видеообзоры на книги. Иногда можно приобрести дорогое издание за «символическую» цену.",
             img: `${pathContentImg}review-3.jpg`,
