--- a/layout/layout.html
+++ b/layout/layout.html
@@ -236,11 +236,7 @@
                 <li class="footer-nav__item">
                   <h4 class="footer-nav__title footer-nav__title--more">Адрес</h4>
                   <ul class="footer-nav__sub-list">
-                    <li class="footer-nav__sub-item">
-                      <p class="footer-nav__text">г. Санкт-Петербург, <br>
-                        наб. Pеки Карповки, 5 корпус П
-                      </p>
-                    </li>
+                    <li class="footer-nav__sub-item"><p class="footer-nav__text">г. Санкт-Петербург, <br> наб. Pеки Карповки, 5 корпус П</p></li>
                     <li class="footer-nav__sub-item"><a class="footer-nav__link" href="tel:+78005558628">+7 800 555 86 28</a></li>
                   </ul>
                 </li>
@@ -248,7 +244,7 @@
             </nav>
           </div>
         </div>
-        <p class="footer__copyright">© ООО «Интерактивные обучающие технологии», 2013−2021                       </p>
+        <p class="footer__copyright">© ООО «Интерактивные обучающие технологии», 2013−2021</p>
       </footer>
     </div>
   </body>
